# api

./: .gitignore  .npmrc  COMPATIBILITY.md  Cargo.toml  LICENSE  README.md  buf.gen.yaml  buf.yaml  build.rs  migration-manifest.json  package-lock.json  package.json
.github/workflows/: ci.yml  publish-github-package.yml  release.yml
breaking/: 0.1.0.md  0.2.0.md
build_support/: method_generation.rs
capabilities/: MATRIX.md  sources.json
capabilities/declarations/: heddle.json  tapestry.json  weft.json
docs/: operation-cutover.md
legacy/: heddle-v1-0.23.binpb
proto/heddle/api/v1alpha1/: agent.proto  agent_gateway.proto  attention.proto  collaboration.proto  contract.proto  errors.proto  identity.proto  operation.proto  pull_request_review.proto  registry.proto  repo_sync.proto  repository.proto  search.proto  service.proto  state_review.proto  transport_bootstrap.proto  types.proto  workflow.proto
src/: framing.rs  lib.rs  signing.rs  transport.rs
tests/: test_capability_matrix.py  test_handle_contract.py  test_operation_contract.py  test_transport_contract.py  test_workflow_contract.py  transport_bootstrap.rs  transport_contract.rs
tests/fixtures/: handle-contract-v1.json  handle-wire-v1.json  hosted-call-v1.json  transport-bootstrap-v1.json  unary-signing-v1.json
tools/: audit_contract.py  build_contract.py  capability_matrix.py  descriptor-inventory.mjs  generate-ts-exports.mjs  verify-ts-vectors.mjs  verify.sh
