[package]
name = "heddle-api"
version = "0.1.0"
edition = "2024"
authors = ["HeddleCo"]
license = "Apache-2.0"
repository = "https://github.com/HeddleCo/api"
description = "Generated Rust types and gRPC bindings for the Heddle public API"
build = "build.rs"
include = ["/build.rs", "/src/**", "/proto/**", "/tests/fixtures/**", "/Cargo.toml", "/README.md", "/LICENSE"]

[features]
default = []
client = ["dep:tonic", "dep:tonic-prost"]
server = ["dep:tonic", "dep:tonic-prost"]
reflection = []

[dependencies]
bytes = "=1.11.1"
prost = "=0.14.1"
prost-types = "=0.14.1"
hex = "=0.4.3"
sha2 = "=0.10.9"
tonic = { version = "=0.14.2", optional = true }
tonic-prost = { version = "=0.14.2", optional = true }

[build-dependencies]
protoc-bin-vendored = "=3.2.0"
tonic-prost-build = "=0.14.2"

[dev-dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[package.metadata.cargo-machete]
ignored = ["bytes", "prost-types", "tonic-prost"]
